--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -10,6 +10,7 @@ evaluationDependsOn(':es')
 
 dependencies {
     compile project(':es')
+    compile 'com.carrotsearch:junit-benchmarks:0.7.0'
     compile 'org.python:jython-standalone:2.7-b1'
     compile "org.mockito:mockito-core:1.9.5"
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
